--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ h1{
     text-align: center;
 }
 body{
-    display: block;
+    display: -ms-inline-flexbox;
     position: relative ;
     margin-left: auto;
     margin-right: auto;
